<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="repoViewModel"
            type="com.coppermobile.myapplication.viewmodel.RepoViewModel" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/size_10"
            android:paddingEnd="@dimen/size_10"
            tools:context=".activity.MainActivity">

            <EditText
                android:id="@+id/et_searchRepo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_repo_name"
                android:imeOptions="actionSearch"
                android:inputType="textNoSuggestions" />

            <TextView
                android:id="@+id/tv_availableRepo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text= "@{String.format(@string/number_of_repo_found, repoViewModel.count)}"/>

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefreshLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_repo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
            </android.support.v4.widget.SwipeRefreshLayout>
            
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_loader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="@{repoViewModel.visibility}"/>
    </RelativeLayout>
</layout>